impl server status endpoint
